2008-09-08  Michael Goffioul  <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (encode_uint_image): Resolve "pow"
	ambiguity.

	* graphics.cc (base_properties::get_dynamic,
	base_properties::set_dynamic, base_propertyes::get_property_dynamic):
	Add the 3rd template parameter to std::map, corresponding to all_props
	field.

2008-09-08  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc (std::string extract_keyword (std::istream&,
	const char *, const bool)): Also accept \r as line ending character.
	* ls-oct-ascii.h (template <class T> bool extract_keyword
	(std::istream&, const char *, T&, const bool)): Likewise.
	(template <class T> bool extract_keyword (std::istream&, const
	string_vector&, std::string&, T&, const bool)): Likewise.

2008-09-03  Ben Abbott <bpabott@mac.com>

	* mappers.cc: Use eps(single) as tolerance for single precesion test.

2008-09-03  John W. Eaton  <jwe@octave.org>

	* variables.cc (mlock): Lock current function on the call stack.
	(Fmlock): Lock caller.

	* symtab.cc (out_of_date_check_internal): If dispatch type is set,
	check for method.  If that fails, check for regular function. 

2008-09-02  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.cc (hggroup::update_axis_limits): Also reacts on
	[xyzac]liminclude changes.

2008-08-31  Michael Goffioul  <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/fltk_backend.cc (fltk_backend::redraw_figure,
	fltk_backend::print_figure): Change graphics_handle argument to
	graphics_object.

2008-08-29  David Bateman  <dbateman@free.fr>

	* src/graphics.cc: Replace int by octave_idx_type in multiple
	places.
	(array_property::is_equal): In macro CHECK_ARRAY_EQUAL, special
	case scalar case and keep copy of array value to avoid early
	destruction of converted array values.
	
2008-08-28  David Bateman  <dbateman@free.fr>

	* graphics.h.in (root_figure::properties::showhiddenhandles):
	New property.

2008-08-27  Jaroslav Hajek  <highegg@gmail.com>
